<resources>
    <string name="app_name">CapiTool</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="continua">Continue</string>
    <string name="Si">Yes</string>
    <string name="No">No</string>

    <string name="CreatingOpera">You need to grant permission if you want to create an Opera</string>

    <string name="siteManagement">Site Management</string>
    <string name="mySite">My Site</string>
    <string name="site">Site</string>
    <string name="settingSite">Site Settings</string>

    <string name="myRoutes">My Routes</string>
    <string name="myFavourites">Favourites</string>
    <string name="recommendedRoutes">Recommended Routes</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="searchSites">Search for Sites or Cities</string>
    <string name="addSite">Create new Route</string>

    <string name="siteSetting">Site Settings</string>

    <string name="toolbarDelegateSite">Delegate Site</string>
    <string name="toolbarDeleteSite">Delete Site</string>

    <string name="deleteSite">Delete site</string>
    <string name="deleteSite_subtext">Delete the entire cultural site and its data</string>
    <string name="delegateSite">Delegate site</string>
    <string name="delegateSite_subtext">Delegate your site to another curator</string>
    <string name="open_Site">Opening: </string>
    <string name="close_Site">Closing: </string>
    <string name="ticket_price">Ticket price: </string>
    <string name="site_address">Address: </string>

    <string name="selectDelegate">Choose who to delegate your site</string>
    <string name="delegatedEmail">Enter the delegate\'s email</string>
    <string name="checkInfoConfermed">I confirm that I have read the information</string>

    <string name="howToDeletePassword">Enter your password and confirm to delete your cultural site</string>
    <string name="insertYourPassword">Insert your password</string>

    <string name="toastDelegateSito">Delegate site not available: you do not have an associated site</string>
    <string name="toastDeleteSito">Delete site not available: you do not have an associated site</string>

    <string name="toastNessunaOpera">No opera selected!</string>
    <string name="toastDatiPercorso">Check your path name!</string>
    <string name="toastPercorsoSalvato">Path saved successfully!</string>
    <string name="toastAggiuntoPercorsoAiPreferiti">Path saved in favourites</string>
    <string name="toastRimossoPercorsoDaiPreferiti">Path Removed from favourites</string>
    <string name="cercaPercorso">Search Path Name</string>
    <string name="descrizionePercorso">Description:</string>
    <string name="eliminaPercorsoTitolo">Delete a Path</string>
    <string name="eliminaPercorsoMessaggio">Are you sure you want to delete the Path chosen?</string>
    <string name="percorsoEliminato">Path deleted</string>

    <string name="noPswInsert">You don\'t insert any password</string>
    <string name="boxInfoNotChecked">You must confirm thah you read the information</string>
    <string name="SuccesfulDeleteSite">Site successfully deleted</string>

    <string name="noEmailInsert">You don\'t insert any email</string>
    <string name="userNotFound">Error: user not found</string>
    <string name="userhaveAlreadySite">Error: You cannot delegate to a curator who already has a site</string>
    <string name="SuccesfulDelegateSite">Site successfully delegated</string>

    <string name="zoneDeletedSuccesful">Zone successfully deleted</string>
    <string name="artworkDeletedSuccesful">Artwork successfully deleted</string>

    <string name="addOperaToolbar">Add opera in </string>
    <string name="errorOperaTitle">Enter a valid Opera title and not empty</string>
    <string name="errorOperaDescription">Enter a description</string>
    <string name="correctEnterOpera">Opera added correctly</string>

    <string name="addSiteToolbar">Add Site</string>

    <string name="pswReq1">Please enter a password with at least 6 characters</string>
    <string name="pswReq2">Please enter at least one capital letter</string>
    <string name="pswReq3">Please enter at least one lower case letter</string>
    <string name="pswReq4">Please insert at least one special character (e.g. !/*+)</string>

    <string name="errorDelegate">Error in delegation, something went wrong</string>
    <string name="errorDelegate2">You cannot delegate a site to a non-curator user</string>

    <string name="deleteOpera">Delete Opera</string>

    <string name="correctDeleteSite">Site deleted successfully!</string>.

    <string name="deleteZoneToolbar">Delete Zone</string>

    <string name="insertEmail">Insert an email</string>
    <string name="checkInsertData">Check the data you entered and try again</string>
    <string name ="accountNotFound">Account not found</string>

    <string name="editSiteToolbar">Edit Site</string>

    <string name="orderZoneToolbar">Order Zone</string>
    <string name="correctOrderZone">Zone ordered correctly</string>

    <string name="signUpToolbar">Sign Up</string>

    <string name="editOperaToolbar">Edit Opera</string>

    <string name="writeNewNameZone">Write the name of the new zone</string>

    <string name="errorCitytName">Enter a valid, non-empty city name</string>
    <string name="errorClosingTime">Enter the closing time</string>
    <string name="errorOpeningTime">Enter the opening time</string>
    <string name="errorEntranceFee">Enter the entrance fee in euros (e.g. 10.50)</string>
    <string name="errorAddress">Please enter a valid, non-empty address (e.g. Via Napoli 42)</string>

    <string name="errorSiteName">Enter a valid, non-empty name</string>

    <string name="loading">Loading</string>

    <string name="personalData">Personal Data</string>
    <string name="security">Security</string>
    <string name="accountMngt">Account Management</string>

    <string name="errorLoadingDataMsg">An error occurred while loading your data, you will be returned to your login</string>
    <string name="errorLoadingDataDscr">Error loading data</string>

    <string name="insertValidName">Insert a valid name</string>
    <string name="insertValidSurname">Insert a valid surname</string>
    <string name="correctUpdatePersonalData">Personal data updated correctly</string>
    <string name="correctUpdatePhotoProfile">Profile photo updated successfully</string>


    <string name="requiredField">Required field</string>
    <string name="erroreDeleteAccount">Unable to delete account. Delegate your site or delete it</string>
    <string name="correctDeleteAccount">Account successfully deleted</string>
    <string name="errorOccurred">There was an error. Please try again</string>
    <string name="errorPsw">Wrong password</string>

    <string name="missmatchPsw">The password does not match the one previously entered</string>
    <string name="oldPswEqualNew">The new password is the same as the old one. Please enter a different password</string>
    <string name="correctUpdatePassword">Password updated correctly</string>
    <string name="wrongPassword">Wrong password</string>

    <string name="insertValidEmail">Insert a valid email</string>
    <string name="userAlredyExists">User already exists</string>

    <string name="insertYourName">Enter your name</string>
    <string name="insertYourSurname">Enter your surname</string>
    <string name="insertYourBirthDate">Enter your birth date</string>
    <string name="insertYourLicenseNumber">Enter your license number</string>

    <string name="selectRole">Select a role among Curator, Visitor or Tourist Guide</string>
    <string name="roleNotSelected">Role not selected</string>

    <string name="addOpera">"Add Opera"</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="sito">Site</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="openingTime">Opening Time</string>
    <string name="closingTime">Closing Time</string>

    <string name="welcome">Welcome! Login or Register</string>
    <string name="register">Register</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="noOperasInZone">There are no operas in this zone</string>
    <string name="clickOn">Click on</string>
    <string name="toStart">to start</string>
    <string name="noZonesInSite">There are no zones on this site</string>

    <string name="dialogDelegateTitle">Confirm delegation of your site</string>
    <string name="dialogDelegateMsg">Do you really want to delegate your site? If you confirm, you will no longer be able to manage it. </string>

    <string name="entranceFee">Entrance fee (in €)</string>

    <string name="siteName">Site name</string>
    <string name="next">Next</string>
    <string name="clickOnImage">Click on the image to select a new one </string>
    <string name="toAddSite">to add your Site</string>

    <string name="routeName">Nome Percorso</string>
    <string name="publicString">Public</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birthDate">Birth Date</string>
    <string name="licenseNumber">License\'s number</string>

    <string name="insertPswToDeleteAccount">Enter your password to delete your account</string>
    <string name="attention">Attention</string>
    <string name="attentionInfo">By clicking on the confirm button your account will be permanently deleted</string>

    <string name="viewZoneAndOpera">View Zones and Operas</string>
    <string name="timetable">Timetable</string>
    <string name="entranceFeeString">Entrance fee</string>

    <string name="toCreateARoute">to create a route</string>

    <string name="edit">Edit</string>

    <string name="confirmPassword">Confirm password</string>
    <string name="createYourAccount">Create your account</string>
    <string name="showPassword">Show Password</string>


    <string name="visitor">Visitor</string>
    <string name="curatore">Curator</string>
    <string name="guide">Tourist guide</string>
    <string name="whichRole">How do you want to register?</string>

    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name = "changePassword"> Change your current password </string>





















</resources>