<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".fragments.fragmentsNavDrawnBar.FragmentImpostazioniSito">


    <TextView
        android:id="@+id/text_elimina_sito"
        android:layout_width="382dp"
        android:layout_height="63dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_style"
        android:fontFamily="sans-serif"
        android:text="@string/deleteSite"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_delega_sito" />

    <TextView
        android:id="@+id/text_delega_sito"
        android:layout_width="382dp"
        android:layout_height="63dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/rounded_style"
        android:fontFamily="sans-serif"
        android:text="@string/delegateSite"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_sub_delega_sito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:text="@string/delegateSite_subtext"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_delega_sito"
        app:layout_constraintStart_toStartOf="@+id/text_delega_sito"
        app:layout_constraintTop_toTopOf="@+id/text_delega_sito"
        app:layout_constraintVertical_bias="0.636" />

    <TextView
        android:id="@+id/text_sub_elimina_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/deleteSite_subtext"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@+id/text_elimina_sito"
        app:layout_constraintTop_toTopOf="@+id/text_elimina_sito" />

    <ImageView
        android:id="@+id/image_delega_sito"
        android:layout_width="41dp"
        android:layout_height="34dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_sharp_output_24"
        app:layout_constraintBottom_toBottomOf="@+id/text_delega_sito"
        app:layout_constraintStart_toStartOf="@+id/text_delega_sito" />

    <!--<ImageView
        android:id="@+id/button_delega_sito"
        android:layout_width="41dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:src="@drawable/ic_baseline_navigate_next_24"
        app:layout_constraintBottom_toBottomOf="@+id/text_delega_sito"
        app:layout_constraintEnd_toEndOf="@+id/text_delega_sito" />-->

    <!--<ImageView
        android:id="@+id/button_elimina_sito"
        android:layout_width="41dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:src="@drawable/ic_baseline_navigate_next_24"
        app:layout_constraintBottom_toBottomOf="@+id/text_elimina_sito"
        app:layout_constraintEnd_toEndOf="@+id/text_elimina_sito" />-->

    <ImageView
        android:id="@+id/image_elimina_sito"
        android:layout_width="41dp"
        android:layout_height="34dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:src="@drawable/ic_outline_delete_24"
        app:layout_constraintBottom_toBottomOf="@+id/text_elimina_sito"
        app:layout_constraintStart_toStartOf="@+id/text_elimina_sito" />


</androidx.constraintlayout.widget.ConstraintLayout>