<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemPercorso"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImmaginePercorso"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/museum" />

        <TextView
            android:id="@+id/itemNomePercorso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Sito di Prova 1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/itemImmaginePercorso"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemNomeSitoAssociato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:text="Bari"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/itemImmaginePercorso"
            app:layout_constraintTop_toBottomOf="@+id/itemNomePercorso" />

        <TextView
            android:id="@+id/itemLableOrarioAperturaSito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/open_Site"
            app:layout_constraintStart_toEndOf="@+id/itemImmaginePercorso"
            app:layout_constraintTop_toBottomOf="@+id/itemLableCostoBigliettoSito" />

        <TextView
            android:id="@+id/itemLableOrarioChiusuraSito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="8dp"
            android:text="@string/close_Site"
            app:layout_constraintStart_toEndOf="@+id/itemOrarioAperturaSito"
            app:layout_constraintTop_toBottomOf="@+id/itemLableCostoBigliettoSito" />

        <TextView
            android:id="@+id/itemDescrizionePercorso"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:text="Via Baldo degli Ubaldi 26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemLableDescrizionePercorso" />

        <TextView
            android:id="@+id/itemLableCostoBigliettoSito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/ticket_price"
            app:layout_constraintStart_toEndOf="@+id/itemImmaginePercorso"
            app:layout_constraintTop_toBottomOf="@+id/itemNomeSitoAssociato" />

        <TextView
            android:id="@+id/itemCostoBigliettoSito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:text="12"
            app:layout_constraintStart_toEndOf="@+id/itemLableCostoBigliettoSito"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemOrarioAperturaSito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="10:00"
            app:layout_constraintStart_toEndOf="@+id/itemLableOrarioAperturaSito"
            app:layout_constraintTop_toBottomOf="@+id/itemLableCostoBigliettoSito" />

        <TextView
            android:id="@+id/itemOrarioChiusuraSito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="12:00"
            app:layout_constraintStart_toEndOf="@+id/itemLableOrarioChiusuraSito"
            app:layout_constraintTop_toBottomOf="@+id/itemCostoBigliettoSito" />

        <TextView
            android:id="@+id/LableEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:text="€"
            app:layout_constraintStart_toEndOf="@+id/itemCostoBigliettoSito"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemLableDescrizionePercorso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/site_address"
            app:layout_constraintStart_toEndOf="@+id/itemImmaginePercorso"
            app:layout_constraintTop_toBottomOf="@+id/itemLableOrarioAperturaSito" />

        <TextView
            android:id="@+id/itemIdPercorso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="13dp"
            android:text="id Sito"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>